test/parser/ast/function_declaration/empty_type_params.exp
Error: Unexpected token `>`, expected identifier
test/parser/ast/function_declaration/empty_type_params.myte:3:8
 3 | fun foo<>() {}
   |         ^